--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,3 +11,10 @@
 td > input {
   width: 100%;
 }
+table, td{
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+td{
+  text-align: center;
+}
